# leptos-scholar

./: Cargo.toml  index.html
assets/: style.scss
src/: lib.rs  main.rs
